trunk/Archive2/3a/da83be9bf64abb/output
In file included from main.cpp:1:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/utility:70:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_pair.h:139:4: error: call to deleted constructor of 'A'
        : first(__x), second(std::forward<_U2>(__y)) { }
          ^     ~~~
main.cpp:12:10: note: in instantiation of function template specialization 'std::pair<A, int>::pair<int, void>' requested here
  return {{18, 18}, 18}; // FAIL
         ^
main.cpp:6:3: note: 'A' has been explicitly marked deleted here
  A(const A&) = delete; // move only
  ^
1 error generated.
